<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0A000000">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="微信"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_jiahao"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp"
            android:gravity="center_vertical"
            android:text="@string/jiahao"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_fangfajing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:gravity="center_vertical"
            android:text="@string/fangdajing"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <ListView
            android:id="@+id/list_view_wechat"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#A8FFFFFF">

        <Button
            android:id="@+id/bt_liaotian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/liaotian"
            android:textColor="#00ff00"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bt_tongxunlu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/tongxunlu"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bt_faxian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/faxian"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_wode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/wode"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>