<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0A000000">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="发现"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_jiahao"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp"
            android:gravity="center_vertical"
            android:text="@string/jiahao"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_fangfajing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:gravity="center_vertical"
            android:text="@string/fangdajing"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="#0A000000"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:paddingLeft="20dp"
            android:layout_marginBottom="15dp">
<ImageView
    android:layout_width="35dp"
    android:layout_height="35dp"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:src="@drawable/pyq"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="朋友圈"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginRight="13dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/img_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="〉"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:paddingLeft="20dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/af_yaoyiyao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/yaoyiyao"
                android:textSize="38sp"
                android:textColor="#FF06B1F5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="摇一摇"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="〉"
                android:layout_marginRight="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:paddingLeft="20dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/af_fujinderen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/fujinderen"
                android:textSize="35sp"
                android:textColor="#FF06B1F5"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="附近的人"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="〉"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#A8FFFFFF">

        <Button
            android:id="@+id/bt_liaotian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/liaotian"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bt_tongxunlu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/tongxunlu"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bt_faxian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/faxian"
            android:textColor="#00ff00"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_wode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/wode"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>