<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0A000000">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="通讯录"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_jiahao"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp"
            android:gravity="center_vertical"
            android:text="@string/jiahao"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_fangfajing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:gravity="center_vertical"
            android:text="@string/fangdajing"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:background="#0A000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"
            android:background="#ffffff">
        <ImageView
            android:layout_marginLeft="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/txl_xindepengyou"
            android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="新的朋友"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:background="#ffffff">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/txl_qunliao"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="群聊"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:background="#ffffff">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/txl_biaoqian"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="标签"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:background="#ffffff">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/txl_gongzhognhao"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="公众号"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:text="Y"
    android:paddingLeft="12dp"
    android:background="#0A000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:background="#ffffff">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_3"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="闫小二"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="Z"
            android:paddingLeft="12dp"
            android:background="#0A000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:background="#ffffff">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_2"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="张小一"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:background="#ffffff">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_1"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="赵小饼"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#A8FFFFFF">

        <Button
            android:id="@+id/bt_liaotian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/liaotian"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bt_tongxunlu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/tongxunlu"
            android:textColor="#00ff00"
            android:textSize="40sp" />

        <Button
            android:id="@+id/bt_faxian"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/faxian"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_wode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:padding="0dp"
            android:text="@string/wode"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>